sopbre nos javascript

--- a/codigo/public/sobrenos.html
+++ b/codigo/public/sobrenos.html
@@ -17,12 +17,12 @@
             <p class="brasilcozinhasn">Brasil na cozinha</p>
         </div>
         <div class="linkssn1">
-            <a href="home.php" class="linkscabecasn" id="iniciosn">INICIO</a>
+            <a href="home.html" class="linkscabecasn" id="iniciosn">INICIO</a>
             <a href="" class="linkscabecasn" id="perfilsn">PERFIL</a>
             <a href="" class="linkscabecasn" id="receitassn">RECEITAS</a>
             <a href="" class="linkscabecasn" id="buscarsn">BUSCAR</a>
-            <a href="formCadastrarPerfil.php" class="linkscabecasn" id="cadastrosn">CADASTRO</a>
-            <a href="formLoginPerfil.php" class="linkscabecasn" id="loginsn">LOGIN</a>
+            <a href="cadastro.html" class="linkscabecasn" id="cadastrosn">CADASTRO</a>
+            <a href="login.html" class="linkscabecasn" id="loginsn">LOGIN</a>
         </div>
 
         <div class="paodequeijoesndiv">
@@ -69,12 +69,12 @@
             <p class="brasilcozinhasn2">Brasil na cozinha</p>
         </div>
         <div class="linksn2">
-            <a href="home.php" class="linkscabecasn2" id="iniciosn2">INICIO</a>
+            <a href="home.html" class="linkscabecasn2" id="iniciosn2">INICIO</a>
             <a href="" class="linkscabecasn2" id="perfilsn2">PERFIL</a>
             <a href="" class="linkscabecasn2" id="receitassn2">RECEITAS</a>
-            <a href="" class="linkscabecasn2" id="buscarsn2">BUSCAR</a>
-            <a href="formCadastrarPerfil.php" class="linkscabecasn2" id="cadastrosn2">CADASTRO</a>
-            <a href="formLoginPerfil.php" class="linkscabecasn2" id="loginsn2">LOGIN</a>
+            <a href="buscarsn2" class="linkscabecasn2" id="buscarsn2">BUSCAR</a>
+            <a href="cadastro.html" class="linkscabecasn2" id="cadastrosn2">CADASTRO</a>
+            <a href="login.html" class="linkscabecasn2" id="loginsn2">LOGIN</a>
         </div>
         <div class="textsn">
             <div class="titulotextsn">
@@ -94,7 +94,7 @@
         </div>
         </div>
         <div class="botaosobrenos">
-            <a href="home.php"><button class="botaosn">
+            <a href="home.html"><button class="botaosn">
                     Brasil na Cozinha
                     <div class="star-1">
                         <svg xmlns:xlink="http://www.w3.org/1999/xlink" viewBox="0 0 784.11 815.53"
@@ -194,6 +194,7 @@
             </div>
         </div>
     </div>
+    <script src="style/javascript.js"></script>
 </body>
 
 </html>
