ajeitando o sobre no0s DE NOVO

--- a/codigo/public/sobrenos.html
+++ b/codigo/public/sobrenos.html
@@ -18,11 +18,11 @@
         </div>
         <div class="linkssn1">
             <a href="home.html" class="linkscabecasn" id="iniciosn">INICIO</a>
-            <a href="" class="linkscabecasn" id="perfilsn">PERFIL</a>
-            <a href="" class="linkscabecasn" id="receitassn">RECEITAS</a>
-            <a href="" class="linkscabecasn" id="buscarsn">BUSCAR</a>
-            <a href="cadastro.html" class="linkscabecasn" id="cadastrosn">CADASTRO</a>
-            <a href="login.html" class="linkscabecasn" id="loginsn">LOGIN</a>
+            <a href="formPerfil.php" class="linkscabecasn" id="perfilsn">PERFIL</a>
+            <a href="formReceita.php" class="linkscabecasn" id="receitassn">RECEITAS</a>
+            <a href="formPesquisar.php" class="linkscabecasn" id="buscarsn">BUSCAR</a>
+            <a href="formCadastrarPerfil.php" class="linkscabecasn" id="cadastrosn">CADASTRO</a>
+            <a href="formLoginPerfil.php" class="linkscabecasn" id="loginsn">LOGIN</a>
         </div>
 
         <div class="paodequeijoesndiv">
