--- a/codigo/public/sobrenos.html
+++ b/codigo/public/sobrenos.html
@@ -17,7 +17,7 @@
             <p class="brasilcozinhasn">Brasil na cozinha</p>
         </div>
         <div class="linkssn1">
-            <a href="home.html" class="linkscabecasn" id="iniciosn">INICIO</a>
+            <a href="home.php" class="linkscabecasn" id="iniciosn">INICIO</a>
             <a href="formPerfil.php" class="linkscabecasn" id="perfilsn">PERFIL</a>
             <a href="formReceita.php" class="linkscabecasn" id="receitassn">RECEITAS</a>
             <a href="formPesquisar.php" class="linkscabecasn" id="buscarsn">BUSCAR</a>
