--- a/codigo/public/sobrenos.html
+++ b/codigo/public/sobrenos.html
@@ -94,7 +94,7 @@
         </div>
         </div>
         <div class="botaosobrenos">
-            <a href="home.html"><button class="botaosn">
+            <a href="index.php"><button class="botaosn">
                     Brasil na Cozinha
                     <div class="star-1">
                         <svg xmlns:xlink="http://www.w3.org/1999/xlink" viewBox="0 0 784.11 815.53"
